--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Building the future of blockchain" />
-    <meta property="og:title" content="Crypto Family" />
+    <meta property="og:title" content="Orcania" />
     <meta
       property="og:description"
       content="Bulding the future of blockchain technology"
     />
-    <meta property="og:image" content="https://cryptofamily.tech/ogimg.png" />
+    <meta
+      property="og:image"
+      content="https://drive.google.com/uc?export=view&id=1oC_6m3651JfdjiK2fBWNPjWRbm4tzT6q"
+    />
     <meta name="theme-color" content="#7289DA" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
